// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should render danger Badge 1`] = `
<div
  className="badge badge-danger undefined"
>
  Danger
</div>
`;

exports[`Badge should render info Badge 1`] = `
<div
  className="badge badge-info undefined"
>
  Info
</div>
`;

exports[`Badge should render success Badge 1`] = `
<div
  className="badge badge-success undefined"
>
  Success
</div>
`;

exports[`Badge should render warning Badge 1`] = `
<div
  className="badge badge-warn undefined"
>
  Warning
</div>
`;
